--- a/package.json
+++ b/package.json
@@ -10,12 +10,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/tailwind": "^5.0.2",
-    "astro": "^3.6.0",
-    "astro-imagetools": "^0.9.0",
-    "astro-navbar": "^2.3.0",
-    "astro-robots-txt": "^1.0.0",
-    "tailwindcss": "^3.3.5"
+    "astro": "^3.6.0"
   }
 }
