--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.6.0"
+    "@astrojs/check": "^0.3.1",
+    "@astrojs/cloudflare": "^8.0.0",
+    "astro": "^4.0.3",
+    "typescript": "^5.3.2"
   }
 }
