dynamically link pages working
only in dev, some issues with the build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
         ],
         "@styles/*": [
           "src/styles/*"
+        ],
+        "@photoswipe/*": [
+          "src/photoswipe/*"
         ]
       }
     }
