--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "photoSite",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
+    "dev": "astro sync && astro dev",
+    "build": "astro sync && astro build",
     "cloudflarePreview": "astro build && wrangler pages dev ./dist --port 9001",
     "upgradeEverything": "pnpm dlx @astrojs/upgrade && pnpm update"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^9.1.0",
+    "@astrojs/cloudflare": "^9.2.0",
     "@astrojs/sitemap": "^3.1.1",
-    "astro": "^4.5.6",
-    "sharp": "^0.33.2",
-    "wrangler": "^3.35.0"
+    "astro": "^4.5.9",
+    "sharp": "^0.33.3",
+    "wrangler": "^3.38.0"
   }
 }
